--- a/stylesheet.css
+++ b/stylesheet.css
@@ -52,7 +52,7 @@ header {
 .header-text {
   flex-grow: 9;
   /* border: 1px solid black; */
-  box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25); */
 }
 
 .header-text h3 {
@@ -66,7 +66,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: center;
-  box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25);
+  /* box-shadow: 0px 4px 0px rgba(0, 0, 0, 0.25); */
 }
 
 .container-ellipse {
@@ -189,3 +189,5 @@ section {
   padding-top: 250px;
 }
 
+
+/* EDIT  */
